<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 The MoKee OpenSource Project

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:key="mokee_website"
        android:summary="@string/mokee_website_summary"
        android:title="@string/mokee_website_title" />
    <PreferenceScreen
        android:key="mokee_forum"
        android:summary="@string/mokee_forum_summary"
        android:title="@string/mokee_forum_title" />
    <PreferenceScreen
        android:key="mokee_issues"
        android:summary="@string/mokee_issues_summary"
        android:title="@string/mokee_issues_title" />
    <PreferenceScreen
        android:key="mokee_statistics"
        android:summary="@string/mokee_statistics_summary"
        android:title="@string/mokee_statistics_title" />
    <PreferenceScreen
        android:key="mokee_changelog"
        android:summary="@string/mokee_changelog_summary"
        android:title="@string/mokee_changelog_title" />
    <PreferenceScreen
        android:key="mokee_github"
        android:summary="@string/mokee_github_summary"
        android:title="@string/mokee_github_title" />
    <PreferenceScreen
        android:key="mokee_wiki"
        android:summary="@string/mokee_wiki_summary"
        android:title="@string/mokee_wiki_title" />
    <PreferenceScreen
        android:key="mokee_donate"
        android:summary="@string/mokee_donate_summary"
        android:title="@string/mokee_donate_title" />

</PreferenceScreen>
