<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/mokee_version_info_title" >
        <PreferenceScreen
            android:key="mokee_version"
            android:title="@string/mokee_version_title" />
        <PreferenceScreen
            android:key="mokee_version_type"
            android:title="@string/mokee_version_type_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="available_updates"
        android:title="@string/available_updates_title" >
        <PreferenceScreen
            android:key="tmp_entry"
            android:title="@string/tmp_entry" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="mokee_extras_title"
        android:title="@string/mokee_extras_title" >
        <PreferenceScreen
            android:key="google_mobile_service"
            android:summary="@string/installed_update_summary"
            android:title="@string/google_mobile_service_title" />
    </PreferenceCategory>

</PreferenceScreen>