<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 The CyanogenMod Project

     Licensed under the GNU GPLv2 license

     The text of the license can be found in the LICENSE file
     or at https://www.gnu.org/licenses/gpl-2.0.txt
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/display_name" >

    <ListPreference
        android:dialogTitle="@string/update_check_title"
        android:entries="@array/update_check_entries"
        android:entryValues="@array/update_check_values"
        android:key="pref_update_check_interval"
        android:persistent="false"
        android:title="@string/update_check_title" />

    <CheckBoxPreference
        android:key="pref_update_ota"
        android:summary="获取OTA更新"
        android:title="OTA更新" />

    <ListPreference
        android:dialogTitle="@string/update_type_title"
        android:entries="@array/update_type_entries"
        android:entryValues="@array/update_type_values"
        android:key="pref_update_types"
        android:persistent="false"
        android:title="@string/update_type_title" />

    <!-- TODO: add this back once we have a way of doing backups that is not recovery specific -->
    <CheckBoxPreference
        android:key="pref_update_all"
        android:summary="获取所有更新列表"
        android:title="获取全部更新" 
        android:dependency="pref_update_types"/>

    <PreferenceCategory
        android:key="updates_category"
        android:title="@string/available_updates_title" >
    </PreferenceCategory>

</PreferenceScreen>